Criei a tela de home

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="./iphone.html" name="redes" frameborder="0" id="redes" scrolling="no">
+                <p>Não foi possível carregar esse Iframe no seu aparelho</p>
+            </iframe>
         </section>
         <section id="redes-sociais">
-            
+
         </section>
     </main>
 </body>
