--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="redes"><img src="./imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="/iphone.html" target="redes"><img src="./imagens/logo-home.jpg" alt="home"></a><br>
             <a href="#" target="redes"><img src="./imagens/logo-youtube.jpg" alt="Youtube"></a><br>
             <a href="#" target="redes"><img src="./imagens/logo-github.jpg" alt="GitHub"></a><br>
             <a href="#" target="redes"><img src="./imagens/logo-instagram.jpg" alt="Instagram"></a><br>
