--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="./iphone.html" name="redes" frameborder="0" id="redes" scrolling="no">
+            <iframe src="./iphone.html" name="redes" frameborder="0" id="redes">
                 <p>Não foi possível carregar esse Iframe no seu aparelho</p>
             </iframe>
         </section>
         <section id="redes-sociais">
             <a href="./iphone.html" target="redes"><img src="./imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="redes"><img src="./imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="#" target="redes"><img src="./imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="./youtube.html" target="redes"><img src="./imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="./github.html" target="redes"><img src="./imagens/logo-github.jpg" alt="GitHub"></a><br>
             <a href="./instagram.html" target="redes"><img src="./imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="redes"><img src="./imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="redes"><img src="./imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="./twitter.html" target="redes"><img src="./imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="./facebook.html" target="redes"><img src="./imagens/logo-facebook.jpg" alt="Facebook"></a><br>
         </section>
     </main>
 </body>
