--- a/iphone.html
+++ b/iphone.html
@@ -14,6 +14,11 @@
             background-position: top center;
             background-size: cover;
         }
+
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
     </style>
 </head>
 <body>
