--- a/twitter.html
+++ b/twitter.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/social.css">
-    <title>Document</title>
+    <title>1</title>
  
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a href="instagram.com/joaommr" target="_blanck">ACESSE</a>
+    <img src="./imagens/tela-twitter.jpg" alt="instagram">
+    <a href="https://twitter.com/" target="_blanck">ACESSE</a>
 </body>
 </html>
